Fixed Alignment & webpack

--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -19,5 +19,5 @@ div.st-view-select div.components-input-control__container select.components-sel
 }
 
 .wp-block[data-align="center"] {
-    margin: 0 auto;
+    margin: 0 auto!important;
 }
